--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,3 +6,7 @@
 @import "./components/cart-item";
 @import "./components/featured";
 @import "./components/navbar";
+@import "./components/sort";
+@import "./components/filter";
+@import "./components/productList";
+@import "./components/product";
